--- a/frontend/project/package.json
+++ b/frontend/project/package.json
@@ -16,9 +16,11 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
+    "node-sass": "^4.12.0",
     "nuxt": "^2.4.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^7.1.0",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
   },
