--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
     username: postgres
     password: password
     driverClassName: org.postgresql.Driver
+mybatis:
+  config-location: classpath:/mybatis/mybatis-config.xml
